[tool.poetry]
name = "databricks-session"
version = "0.1.11"
description = "A simple util to get a spark and mlflow session objects from an .env file"
authors = ["Carlos Escobar <carlosdavidescobar@gmai.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "databricks_session"}]

[tool.poetry.dependencies]
python = "^3.10"
mlflow = "^2.4.1"
databricks-connect = "^13.1.0"
pydantic = "^1.10.9"
python-dotenv = "^1.0.0"
protobuf = "^4.23.3"
typing-extensions = "^4.6.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
